--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,14 @@
 			<artifactId>spring-data-envers</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.github.ulisesbocchio/jasypt-spring-boot-starter -->
+		<dependency>
+			<groupId>com.github.ulisesbocchio</groupId>
+			<artifactId>jasypt-spring-boot-starter</artifactId>
+			<version>3.0.3</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
@@ -62,6 +70,13 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<!-- https://mvnrepository.com/artifact/com.github.ulisesbocchio/jasypt-spring-boot-starter -->
+			<plugin>
+				<groupId>com.github.ulisesbocchio</groupId>
+				<artifactId>jasypt-maven-plugin</artifactId>
+				<version>3.0.3</version>
+			</plugin>
+
 		</plugins>
 	</build>
 
