--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,8 +6,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/svj
-    username: root
-    password: root
+    username: ENC(a/unM5nVvzPkYmgLFksTwA==)
+    password: ENC(js9i0a3sKhlqpI+2ANFiQg==)
 
   jpa:
     hibernate:
