--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,10 @@
 			<artifactId>jackson-datatype-jsr310</artifactId>
 			<version>2.13.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 
 
 	</dependencies>
